# document_retriever

./: README.md  ingestion.py  main.py  pyproject.toml  retrieval.py
backend/: __init__.py  core.py
