[project]
name = "document-retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "dotenv>=0.9.9",
    "fastapi>=0.137.1",
    "isort>=8.0.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=7.3.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
